--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/himali-dev/HimaliTechBlog.git"
+    "url": "git+https://github.com/himali-dev/FullStackBlog.git"
   },
   "author": "Himali Panchal",
-  "license": "ISC",
-  "homepage": "https://github.com/himali-dev/HimaliTechBlog#readme",
+  "license": "MIT",
+  "homepage": "https://github.com/himali-dev/FullStackBlog#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "bulma": "^0.9.0",
